# Typed_to_handwritten

./: .gitignore  EXECUTION_COMMANDS.sh  README.md  allographic_engine.py  audit_results.txt  bio_kinematic_engine.py  build_sovereign_atlas.py  calibrate_paper.py  calibrate_substrate.py  debug_cal.py  debug_v10.py  expand_atlas.py  fiber_generator.py  forensic_design_system.md  forensic_discriminator.py  generate_assignment.py  generate_masterpiece.py  generate_masterpiece_v51.py  handwriting_randomizer.py  index.html  letter_draft.txt  my_assignment.txt  my_history_assignment.txt  notebook_renderer.py  phase10_legacy_synthesis.py  phase1_nlp_augmentation.py  phase2_ink_synthesis.py  phase3_degradation.py  phase4_sovereign_synthesis.py  phase4_telemetry.py  phase5_forensic_synthesis.py  phase7_masterpiece_synthesis.py  phase8_desktop_synthesis.py  phase9_allographic_synthesis.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py  scene_synthesizer.py  server.py  (+9 more)
.github/workflows/: ci.yml
api/: generate.py  health.py
assets/: calibration.json  sovereign_atlas.json  sovereign_atlas_v9.json
brain/: sovereign_config.json  v6_findings.md
scripts/: post_deploy_smoke.py
tests/: test_health_endpoint.py  test_ocr_benchmark_stats.py  test_pipeline_cli.py  test_render_api_compat.py  test_top_clipping_regression.py
tools/: ocr_benchmark.py  ocr_technique_sweep.py
