[project]
name = "typed-to-handwritten"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
  "numpy>=1.26,<3",
  "pillow>=10,<13",
  "opencv-python-headless>=4.8,<5",
  "scipy>=1.10,<2",
  "freetype-py>=2.4,<3",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "venv",
  "env",
  "output",
  "assignments",
  "agent-skills",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E402", "E501", "E701", "E702", "E741", "B905", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
